[gd_scene load_steps=2 format=3 uid="uid://cx1b8vbv5mq2m"]

[ext_resource type="Script" path="res://pages/menu_principal/Quiz/Quiz_result.gd" id="1_my6li"]

[node name="Résultats_du_quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my6li")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Titre" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Résultats du Quiz"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Label_Score" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score : 0 / 0"
horizontal_alignment = 1

[node name="Label_Commentaire" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "C'est bien mais peut mieux faire"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Bt_quit_Quiz" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
text = "Arrêter"

[node name="Bt_redo_Quiz" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
text = "Recommencer"

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/Bt_quit_Quiz" to="." method="_on_bt_quit_quiz_pressed"]
[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/Bt_redo_Quiz" to="." method="_on_bt_redo_quiz_pressed"]
